--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Hello, Mathias!</h1>
 		<img src='unicorn.jpg' width='600'>
+		<h3>HEI HEIN, EG HAR FÅTT TIL PULL REQUESTEN</h3>
 	</body>
 </html>
